--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "typescript": "1.8.10",
     "typings": "0.7.12",
     "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1",
-    "webpack-livereload-plugin": "^0.8.1"
+    "webpack-dev-server": "1.14.1"
   }
 }
