--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pluralsight-product-managment",
-  "version": "1.2.0",
+  "name": "angular2-starter",
+  "version": "1.0.0",
   "description": "Angular 2, TypeScript and Webpack",
   "scripts": {
     "postinstall": "typings install",
